<resources>
    <string name="app_name">Guard U</string>
    <string name="welcome">Welcome to </string>
    <string name="logo">logo</string>
    <string name="get_started">Get Started</string>
    <string name="already_have_an">Already Have An</string>
    <string name="account_login">account? Login</string>
    <string name="copyright">Copyright © 2024 PT. Taura UX. Seluruh hak cipta dilindungi. Guardu dan semua elemen yang terkait, termasuk tetapi tidak terbatas pada nama, logo, desain, fitur, dan konten aplikasi, merupakan milik eksklusif PT. Taura UX</string>
    <string name="login_account">Login Account</string>
    <string name="welcome_back">Welcome back</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">Or sign up with</string>
    <string name="google_signup">google_signup</string>
    <string name="facebook_signup">facebook_signup</string>
    <string name="not_register_yet_create_account">Not register yet ? Create Account</string>
    <string name="next">next</string>
    <string name="Next"><![CDATA[Next>>>]]></string>
    <string name="bullyillustration">bully illustration</string>
    <string name="rightarrow"><![CDATA[>>]]></string>
    <string name="leftarrow"><![CDATA[<<]]></string>
    <string name="bullyillustration1">bullyillustration1</string>
    <string name="joinus">Join Us and</string>
    <string name="joinus1">Connect</string>
    <string name="joinus2">with our</string>
    <string name="joinus3">community.</string>
    <string name="sign_up">Sign Up</string>
    <string name="register_account">Register Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="create_password">Create Password</string>
    <string name="terms">By Creating account, you are accepting</string>
    <string name="terms_conditions"><![CDATA[terms & conditions]]></string>
    <string name="register">Or Register With</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_in">Sign in</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_otp">Send OTP</string>
    <string name="verify">Verify Mobile Number</string>
    <string name="resend">Resend</string>
    <string name="incorrect_mobile_number_edit_now">Incorrect mobile Number? Edit now</string>
    <string name="confirm">Confirm</string>
    <string name="report_status">Report Status</string>
    <string name="logo_back">back</string>
    <string name="reportyear">2018</string>
    <string name="reportdate">18 Nov</string>
    <string name="reporttime">10:04 AM</string>
    <string name="status">Status</string>
    <string name="success_sended">Success sended</string>
    <string name="Location">SMPN 1 Tangerang Selatan</string>
    <string name="logo_location">Location</string>
    <string name="home">Home</string>
    <string name="community">Community</string>
    <string name="profile">Me</string>
    <string name="news">News</string>
    <string name="guardu">guardu logo</string>
    <string name="kojo">KOJO</string>
    <string name="message1">Remembers what user said earlier in the conversation</string>
    <string name="massage2">Allows user to provide, follow-up corrections With Ai</string>
    <string name="massage3">Just ask about bully</string>
    <string name="inputfiel_bot">Send a message</string>
    <string name="Hello">Hello,</string>
    <string name="hi_taura">Hi Taura</string>
    <string name="icon">Icon</string>
    <string name="neutral">Neutral</string>
    <string name="not_happy">Not Happy</string>
    <string name="how_s_your_mood_today">How\'s your mood today?</string>
    <string name="happy">Happy</string>
    <string name="upload_report">uploadreport</string>
    <string name="make_a_report_nthis_report_will_be_sent_immediately_to_important_parties_please_do_not_make_false_reports_and_if_it_is_an_emergency_please_press_the_emergency_button_immediately">Make a report\nthis report will be sent immediately to important parties please do not make false reports and if it is an emergency please press the emergency button immediately.</string>
    <string name="chatbot">chatbot_button\n</string>
    <string name="latest_news">Latest News</string>
    <string name="see_all">See All</string>
    <string name="introduction_guardu_app">Introduction GuardU App</string>
    <string name="vidtutorial">video</string>
    <string name="faq">faq</string>
    <string name="arrow">arrow</string>
    <string name="newss">Latest News</string>
    <string name="back_button">Back Button</string>
    <string name="your_profile">Your Profile</string>
    <string name="profile_icon">Profile Icon</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log Out</string>
    <string name="search_bar">search bar</string>
    <string name="sunday_9_may_2021">Sunday, 9 May 2021</string>
    <string name="we_must_stop_bully">We Must Stop Bully</string>
    <string name="published_by_ryan_browne">Published by Ryan Browne</string>
    <string name="london_bullying_children_is_harmful_and_can_have_severe_long_term_consequences_experts_warn">LONDON — Bullying children is harmful and can have severe long-term consequences, experts warn...</string>
    <string name="news11">LONDON — Bullying children is harmful and can have severe long-term consequences, experts warn. Parents, teachers, and society as a whole must take responsibility to address this issue and protect the mental health of young people. Bullying, both in person and online, has become a growing concern in recent years, with experts comparing its psychological impact to other forms of trauma. Studies show that children who are bullied often experience anxiety, depression, and even suicidal thoughts, sometimes carrying these effects into adulthood</string>
    <string name="back">Back</string>
    <string name="your_profile_icon">Your Profile Icon</string>
    <string name="settings_icon">Settings Icon</string>
    <string name="in_emergency">In emergency?</string>
    <string name="non_verbal">Non-Verbal</string>
    <string name="verbal">Verbal</string>
    <string name="cyber_bullying">Cyber Bullying</string>
    <string name="write_your_post_here">Write your post here...</string>
    <string name="parent">Parent</string>
    <string name="school">School</string>
    <string name="psycholog">Psycholog</string>
    <string name="medical_center">Medical Center</string>
</resources>