<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_onboard3"
    tools:context=".ui.onboarding.Onboard3Activity">

    <!-- Ilustrasi gambar -->
    <ImageView
        android:id="@+id/illustration_image"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginStart="52dp"
        android:contentDescription="@string/bullyillustration1"
        android:src="@drawable/logo_onboard3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.67" />

    <TextView
        android:id="@+id/onboard3_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:gravity="center"
        android:text="@string/joinus"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <TextView
        android:id="@+id/onboard31_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/joinus1"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/illustration_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564" />


    <TextView
        android:id="@+id/onboard32_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:gravity="center"
        android:text="@string/joinus2"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/illustration_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.669" />

    <TextView
        android:id="@+id/onboard33_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="180dp"
        android:gravity="center"
        android:text="@string/joinus3"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/illustration_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.774" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/next"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_marginEnd="36dp"
        android:text="@string/sign_up"
        app:backgroundTint="#2A3663"
        app:cornerRadius="12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustration_image"
        app:layout_constraintVertical_bias="0.562" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="65dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:text="@string/leftarrow"
        app:backgroundTint="#2A3663"
        app:cornerRadius="13dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/illustration_image"
        app:layout_constraintVertical_bias="0.562" />

</androidx.constraintlayout.widget.ConstraintLayout>